fix: post type form alignment

--- a/src/main.scss
+++ b/src/main.scss
@@ -24661,7 +24661,7 @@ app-image-croper .m-modal-container {
 
 .o-create-post-head{
   width: 100%;
-  padding:13px 27px;
+  padding:18px 27px;
   position: relative;
   background-color: rgba(235,239,242,0.4);
   display: flex;
@@ -24670,7 +24670,7 @@ app-image-croper .m-modal-container {
   }
   .icon-box-design{
       margin-left: 9px;
-      height: 32px;	
+      height: 25px;	
       width: 32px;	
       border: 1px solid rgba(144,164,174,0.2);	
       border-radius: 4px;	
